# Kart-Survive-PSP

./: CMakeLists.txt  README.md  main.c
assets/psfiles/: Count.psd  ICON0.psd  Kart-Big.psd  Kart-Small.psd  PIC1.psd  bg.psd  pipe.psd  slide.psd
test/: EBOOT.PBP  PARAM.SFO
